2013-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* version.sh, www/index.rst: Prepare for 1.3.18 release.

2013-03-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/command.c (DisplayImageCommand): display is supposed to
	respond to +/-usePixmap, but was not.  It was responding to
	+/-use_pixmap.  Now it responds to both.

2013-03-03  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* doc/GraphicsMagick.imdoc: Relocated some <im> .. </im> tags, to
	include several paragraphs that were omitted from the
	GraphicsMagick man page (Environment, Configuration Files, and
	Copyright).

	* doc/imdoc2man: the </pre> tag was being deleted instead of
	replaced with nothing, which caused the first line of the
	subsequent material to be joined to the last line of the <pre>
	block.

2013-03-02  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (ReadOnePNGImage): Avoid a libpng16 warning about
	storing unknown chunks.

2013-02-25  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* coders/png.c (WriteOnePNGImage): Call png_set_bKGD(), etc.,
	after png_set_IHDR() because they depend on members of info_ptr
	which are set by png_set_IHDR().

2013-02-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/resource.c (InitializeMagickResources): Enable the
	dynamic adjustment of OpenMP threads if there is more than one
	thread available.

2013-02-18  Glenn Randers-Pehrson  <glennrp@simple.dallas.tx.us>

	* configure.ac and configure: Check for libpng17 and libpng16.

2013-02-13  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* www/programming.rst: Add mention of Clement Farabet's Lua
	scripting language wrapper for GraphicsMagick.

2013-02-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/pixel_cache.c (GetCacheNexus): Re-write function so it
	has a single point of return.
	(AcquireCacheNexus): Reduce the number of return points.
	(SetCacheNexus): Re-write function so it has a single point of
	return.
