@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020130309"
-#define public MagickPackageReleaseDate "snapshot-20130309"
+#define public MagickPackageVersionAddendum ".020130316"
+#define public MagickPackageReleaseDate "snapshot-20130316"
