@@ -1,3 +1,8 @@
+2013-03-16  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* configure.ac, magick/magick_types.h.in: Fix issues noticed when
+	cross-compiling with MinGW64.
+
 2013-03-09  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* version.sh, www/index.rst: Prepare for 1.3.18 release.
